fix popup on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -715,7 +715,8 @@ html.popup-open {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 35%;
+    /* width: 35%; */
+    width: 660px;
     max-height: 90%;
     background-color: #ffffff;
     z-index: 2;
@@ -792,6 +793,9 @@ html.popup-open {
     text-align: left;
     position: relative;
 }
+.dropdown__button {
+    padding-right: 30px;
+}
 .dropdown__button.active {
     outline: 1px solid blue;
 }
@@ -855,6 +859,25 @@ textarea.booking__input {
     /* color: #fff; */
     /* border: 2px solid #000; */
     transition: all 0.2s;
+}
+
+@media (max-width: 1024.98px) {
+    .booking {
+        width: 90%;
+    }
+}
+@media (max-width: 550px) {
+    .booking__item {
+        flex: 1 0 100%;
+    }
+    .booking {
+        padding: 20px 15px;
+    }
+}
+@media (max-width: 375px) {
+    .booking__title {
+        font-size: 24px;
+    }
 }
 @media (any-hover: hover) {
     .dropdown__item:hover {
